--- a/clients/aq-remodeling/03_website/css/style.css
+++ b/clients/aq-remodeling/03_website/css/style.css
@@ -18,9 +18,12 @@
     --luxury-bronze: #cd7f32;
     --white: #ffffff;
     --off-white: #f5f5f5;
+    --cream: #faf7f2;
     --gray-light: #d4d4d4;
     --gray-medium: #a8a8a8;
+    --gray-warm: #b8b8b8;
     --gray-dark: #666666;
+    --text-light: #ffffff;
     --overlay-light: rgba(10, 10, 10, 0.7);
     --overlay-medium: rgba(10, 10, 10, 0.8);
     --overlay-dark: rgba(10, 10, 10, 0.9);
